# rules_go_centos5

./: BUILD.bazel  Makefile  README.md  WORKSPACE  go.mod  main.go  serverclient.go
