load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "lib",
    srcs = ["main.go"],
    importpath = "github.com/connyay/rules_go_centos5",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "bin",
    embed = [":lib"],
    goarch = "amd64",
    goos = "linux",
    visibility = ["//visibility:public"],
)
