load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")

go_library(
    name = "lib",
    srcs = ["main.go"],
    importpath = "github.com/connyay/rules_go_centos5",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "binary",
    embed = [":lib"],
    goarch = "amd64",
    goos = "linux",
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "tar",
    srcs = [
        "example.txt",
        ":binary",
    ],
)

oci_image(
    name = "image",
    base = "@centos5",
    entrypoint = ["/binary"],
    tars = [":tar"],
)

oci_tarball(
    name = "tarball",
    image = ":image",
    repo_tags = ["centos5test:latest"],
)
